2/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: container
          image: 'nginxinc/nginx-unprivileged'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
