2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver-api
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: webserver
