2/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webserver
spec:
  host: webserver-demo.apps.ocp.superjkdevops.com.pl
  to:
    kind: Service
    name: webserver
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
